# smartcupleague

./: .gitignore  COMPACT_DESKTOP_DENSITY_PLAN.md  DEPLOYMENT_PREP.md  LICENSE  MOBILE_UI_IMPROVEMENT_PLAN.md  README.md  REWARDS_CAMPAIGN_SHUTDOWN_PLAN.md  docker-compose.rewards.yml  render.yaml  rules.txt
agent-skills/smartcup-programs/: SKILL.md
agent-skills/smartcup-programs/agents/: openai.yaml
agent-skills/smartcup-programs/references/: deployment.md  prediction-memory.md  safety-matrix.md  smartcup-program-reference.md  ui-verification.md  vara-wallet-encoding.md  wallet-setup.md
agent-skills/smartcup-programs/skills/: check_freebet_balance.md  check_user_bets.md  claim_match_reward.md  claim_refund.md  dao_read_proposals.md  oracle_read_results.md  place_freebet_bet.md  place_wallet_bet.md  post_match_review.md  preflight.md  read_matches.md  recommend_prediction.md
api/: .env.example  .gitignore  README.md
api/app/: main.py
api/app/core/: config.py
api/app/repositories/: leaderboard_repository.py  profile_repository.py
api/app/schemas/: leaderboard.py  profiles.py
api/app/services/: leaderboard_service.py
api/app/supabase/: 20260515_add_match_pool_amount_to_prediction_events.sql  schema.sql
docs/archive/rewards-campaign/: README.md  Rewards.tsx
docs/plans/: 2026-06-26-podium-result-gtest.md
frontend/: .env.example  HOMEPAGE_PREVIEW_CHANGES.md  README.md
frontend/src/: App.tsx  app-layout.css  consts.ts
frontend/src/hocs/: freebetLedger.ts  lib.ts  oracle.ts
frontend/src/hooks/: index.ts  toast.css  useDynamicMinimumBet.ts  useFreebetBalance.ts  useGaslessVoucher.ts  useOnboarding.ts  usePodiumPick.ts  useTournamentSelection.ts  useVaraPrice.ts  useWalletProfile.ts
frontend/src/pages/: AppLayout.tsx  index.tsx
frontend/src/utils/: address.ts  api.ts  formatters.ts  index.ts  podium.ts  predictionEvents.ts  statsReporter.ts  teams.ts  tournaments.ts  voucherClient.ts
frontend_old/: README.md
frontend_old/src/: App.tsx
frontend_old/src/hooks/: useOnboarding.ts  useWalletProfile.ts
indexer/: .env.example  README.md  docker-compose.yml  package.json  schema.graphql  tsconfig.json
indexer/assets/: bolao_program.idl
indexer/src/: api.ts  config.ts  main.ts  processor.ts  sails-decoder.ts
oracle-server/: package-lock.json  package.json  tsconfig.json
oracle-server/src/: bolao.ts  finalization-utils.ts  oracle.ts  price-feed.ts  result-mapping.ts  server.ts
oracle-server_old/: .env.txt  package.json
oracle-server_old/src/: server.ts
review-bundles/championship-pick-review-2026-05-11/: README_FOR_DEV.md  git-status-at-packaging.txt  tracked-files.diff
review-bundles/frontend-review-2026-05-12/: FRONTEND_REVIEW_SUMMARY.md  tracked-frontend-files.diff
rewards-backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
rewards-backend/src/: app.module.ts  main.ts
scripts/: .pids  deploy.sh  start.sh  stop-supabase.sh  stop.sh
smart-programs/BolaoCore-Program/: Cargo.toml  README.md
smart-programs/DAO-SmartCupLeague-Program/: .binpath  Cargo.toml  README.md  build.rs
smart-programs/DAO-SmartCupLeague-Program/app/: Cargo.toml
smart-programs/DAO-SmartCupLeague-Program/app/src/: lib.rs
smart-programs/DAO-SmartCupLeague-Program/app/src/services/: constants.rs  events.rs  mod.rs  service.rs  state.rs  types.rs  utils.rs
smart-programs/DAO-SmartCupLeague-Program/client/: Cargo.toml  build.rs
smart-programs/DAO-SmartCupLeague-Program/client/src/: dao_client.rs  lib.rs
smart-programs/DAO-SmartCupLeague-Program/src/: lib.rs
smart-programs/DAO-SmartCupLeague-Program/tests/: test.rs  utils.rs
smart-programs/DAO-SmartCupLeague-Program/tests/fixture/: mod.rs
smart-programs/FreebetLedger-Program/: .binpath  Cargo.toml  README.md  build.rs
smart-programs/FreebetLedger-Program/app/: Cargo.toml
smart-programs/FreebetLedger-Program/app/src/: lib.rs
smart-programs/FreebetLedger-Program/client/: Cargo.toml  build.rs
smart-programs/FreebetLedger-Program/client/src/: freebet_ledger_client.rs  lib.rs
smart-programs/FreebetLedger-Program/src/: lib.rs
smart-programs/FreebetLedger-Program/tests/: freebet_ledger_gtest.rs
smart-programs/Oracle-Program/: Cargo.toml  README.md
smart-programs/deploy/: .env.example  Cargo.toml
smart-programs/deploy/src/: main.rs  migrate.rs
supabase/: config.toml
supabase/migrations/: 20260101000000_init.sql
voucher-backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
voucher-backend/src/: app.module.ts  main.ts  seed.ts
(+167 files in other folders)
