[package]
name = "dao-program"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
gstd = "1.10.0"
sails-rs = "0.10.2"
sails-client-gen = "0.10.2"
sails-idl-gen = "0.10.2"
tokio = { version = "1.41", features = ["rt", "macros"] }

[dependencies]
dao-client = { path = "client", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dao-app = { path = "app" }

[build-dependencies]
dao-app = { path = "app" }
sails-rs = { version = "0.10.2", features = ["wasm-builder"] }
sails-idl-gen.workspace = true
sails-client-gen.workspace = true

[dev-dependencies]
dao-program = { path = ".", features = ["wasm-binary", "dao-client"] }
sails-rs = { version = "0.10.2", features = ["gtest"] }
tokio.workspace = true

[features]
wasm-binary = []
std = []
dao-client = ["dep:dao-client"]
