[workspace]
resolver = "2"
members = ["app", "client"]

[package]
name = "smartcup-freebet-ledger"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"

[dependencies]
smartcup-freebet-ledger-app = { path = "app" }

[build-dependencies]
sails-rs = { version = "=0.10.2", features = ["build"] }
sails-idl-gen = "=0.10.2"
smartcup-freebet-ledger-app = { path = "app" }

[dev-dependencies]
futures = "0.3"
gtest = "1.10.0"
smartcup-freebet-ledger-client = { path = "client" }
sails-rs = { version = "=0.10.2", features = ["gtest"] }

[features]
wasm-binary = []

[[test]]
name = "smartcup_freebet_ledger_gtest"
path = "tests/freebet_ledger_gtest.rs"
required-features = ["wasm-binary"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
strip = true
