[package]
name = "smartcup-freebet-ledger-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sails-rs = "=0.10.2"
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }

[build-dependencies]
sails-rs = { version = "=0.10.2", features = ["build"] }
sails-idl-gen = "=0.10.2"
